--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "http://kvo189.github.io/my-app",
+  "homepage": "http://kvo189.github.io/tic-tac-toe",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
